--- a/planner.html
+++ b/planner.html
@@ -2,11 +2,29 @@
 
 <script type="text/javascript">
   google.charts.load("current", {packages:["timeline"]});
-  google.charts.setOnLoadCallback(drawChart);
+  google.charts.setOnLoadCallback(setupCharts);
 
-  function drawChart() {
+  window.addEventListener('resize', setupCharts, false); // Re-render charts on window resize
 
-    var container = document.getElementById('timeline');
+  const thursday = [
+      [ "Truth Stage", "New York Brass Band & Friends", thurs(15, 0), thurs(16, 0) ],
+      [ "Gateway", "Mik Artistik's Ego Trip", thurs(16, 35), thurs(17, 35) ],
+      [ "Gateway", "Lekiddo", thurs(17, 40), thurs(18, 10) ],
+      [ "William's Green", "Michael Eavis & Band", thurs(18, 45), thurs(19, 20) ],
+      [ "William's Green", "TBA", thurs(19, 45), thurs(20, 25) ],
+      [ "Rabbit Hole", "Four Tet", fri(00, 00), fri(01, 30) ],
+      [ "Glade", "Camelphat", fri(00, 25), fri(02, 25) ],
+    ]
+
+  function setupCharts() {
+    drawChart("thursday", thursday)
+    drawChart("friday", thursday)
+    drawChart("saturday", thursday)
+    drawChart("sunday", thursday)
+  }
+
+  function drawChart(id, acts) {
+    var container = document.getElementById(id);
     var chart = new google.visualization.Timeline(container);
     var dataTable = new google.visualization.DataTable();
 
@@ -15,17 +33,46 @@
     dataTable.addColumn({ type: 'date', id: 'Start' });
     dataTable.addColumn({ type: 'date', id: 'End' });
 
-    dataTable.addRows([
-      [ 'Pyramid', 'Sample 1', new Date(2022, 1, 1, 10, 0), new Date(2022, 1, 1, 10, 30) ],
-      [ 'Pyramid', 'Sample 2', new Date(2022, 1, 1, 11, 0), new Date(2022, 1, 1, 12, 30) ],
-    ]);
+    dataTable.addRows(acts);
 
-    chart.draw(dataTable);
+    var options = {
+      timeline: { colorByRowLabel: false }, // Colour by stage
+      chartArea: {
+        height: '100%',
+        width: '100%',
+        top: 48,
+        left: 48,
+        right: 16,
+        bottom: 48
+      },
+      height: '100%',
+      width: '100%',
+    };
+
+    chart.draw(dataTable, options);
   }
 
-  function time(hour, min) {
-    return new Date(2022, 1, 1, hour, min)
+  function thurs(hour, min) {
+    return time(1, hour, min)
+  }
+
+  function fri(hour, min) {
+    return time(2, hour, min)
+  }
+
+  function time(day, hour, min) {
+    return new Date(2022, 1, day, hour, min)
   }
 </script>
 
-<div id="timeline" style="height: 200px;"></div>
+<h1>Thursday</h1>
+<div id="thursday" style="overflow: auto; height: auto;"></div>
+
+<h1>Friday</h1>
+<div id="friday" style="height: 100%;"></div>
+
+<h1>Saturday</h1>
+<div id="saturday" style="height: 100%;"></div>
+
+<h1>Sunday</h1>
+<div id="sunday" style="height: 100%;"></div>
